--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 
 		 function notice(arrData) {
 			 $.post({
-				url: 'http://chat.ppss.com/brother',
+				url: 'https://chat.ppss.com/brother',
 				type: 'post',
 				dataType: 'json',
 				data: {robot_key:'f9c4dade-c64a-4a55-b30e-e328b33ef314',data:arrData},
