--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 					<div id="scanNum" style="margin-bottom: 10px;float: left;line-height: 40px;margin-left:40px;">
 						扫描次数:
 					</div>
-					<input type="checkbox" class="switch" style="float: right;margin-right:280px;margin-top:10px;" value="0">
+ 					<div style="float: right;margin-right:280px;margin-top:10px;"><input type="checkbox" class="switch" value="0"><div style="float: right;padding-left:10px;">微信推送:</div></div>
 					<button id="item-but" style="float: right;margin-right: 80px;">扫大哥</button>
 				</div>
 			</div>
@@ -277,6 +277,9 @@
 		},{
 			name: "100%大哥",
 			address: "0x3499fa28c6d4bd9fdcd3ef8cf915c297b66c2df0"
+		},{
+			name: "小单大哥",
+			address: "0x2df9609b7db9cc74b53908dbd629c30f676138c3"
 		}];
 		let selectHtml;
 		for(let i=0;i<arrData.length;i++) {
