--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 					<div id="scanNum" style="margin-bottom: 10px;float: left;line-height: 40px;margin-left:40px;">
 						扫描次数:
 					</div>
- 					<div style="float: right;margin-right:280px;margin-top:10px;"><input type="checkbox" class="switch" value="0"><div style="float: right;padding-left:10px;">微信推送:</div></div>
+ 					<div style="float: right;margin-right:280px;margin-top:10px;"><div style="float: left;padding-left:10px;">微信推送:</div><input type="checkbox" class="switch" value="0"></div>
 					<button id="item-but" style="float: right;margin-right: 80px;">扫大哥</button>
 				</div>
 			</div>
