--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 							    if($('.switch').prop("checked")) {
 									let url= `https://etherscan.io/address/${d}`;
 									let url1 = `https://www.dextools.io/app/uniswap/pair-explorer/${d}`;
-									let arrData = [geName,changeDic[i],$("#adds").val(),url,url1];
+									let arrData = [geName,changeDic[i],'详情:',url,'行情:',url1];
 								   notice(arrData);
 							    }
 							}
