--- a/index.html
+++ b/index.html
@@ -357,13 +357,20 @@
 				dataType: 'json',
 				timeout: 18000,
 				success: function (data) {
+					scanNum += 1;
+					scanNumSetting();
 					if (data && data.status == 1) {
 						var newData = data.result;
 						if (oldArr.length == 0) {
 							oldArr = newData;
 						} else {
 							// 判断是否有新的交易
-							if(newData[0].blockNumber == oldArr[0].blockNumber) {return false;}
+							if(newData[0].blockNumber == oldArr[0].blockNumber) {
+								if(newData.length != oldArr.length){
+									oldArr = newData;
+								}
+								return false;
+							}
 							var changeNum = newData.length - oldArr.length;
 							var changeDic = {};
 							for (var i = 0; i < changeNum; ++i) {
@@ -411,8 +418,7 @@
 						}
 					}
 
-					scanNum += 1;
-					scanNumSetting();
+					
 				}
 			})
 		}
