增加日期打印

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<script src="jquery.js"></script>
+	<script src="utils.js"></script>
 	<!-- <script>
 		$(function () {
 			getBigBrotherData();
@@ -405,8 +406,10 @@
 								if (changeDic[i].indexOf("买入") != -1) {
 									bgColor = 'green';
 								}
+								// 增加时间
+								let curDate = new Date().Format('yyyy-MM-dd HH:mm:ss')
 								let d = changeDic[i].substring(changeDic[i].indexOf(":") + 1, changeDic[i].length);
-								resultHtml += `<div class="swapItem" style="color: ${bgColor};border: 1px solid ${bgColor};"><div class="contentItem" data-id="${d}">${i} ${changeDic[i]}</div><div class="contentButtonItem" style="background-color: ${bgColor};" data-id=${d}>行情</div></div>`;
+								resultHtml += `<div class="swapItem" style="color: ${bgColor};border: 1px solid ${bgColor};"><div class="contentItem" data-id="${d}">${curDate} ${i} ${changeDic[i]}</div><div class="contentButtonItem" style="background-color: ${bgColor};" data-id=${d}>行情</div></div>`;
 							    if($('.switch').prop("checked")) {
 									let url= `https://etherscan.io/address/${d}`;
 									let url1 = `https://www.dextools.io/app/uniswap/pair-explorer/${d}`;
