--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <title>扫大哥</title>
 
 <head>
-	<script src="jquery.js"></script>
-	<script src="utils.js"></script>
+	<script src="js/jquery.js"></script>
+	<script src="js/utils.js"></script>
 </head>
 
 <body>
-	<audio src="ding.wav" preload="auto" id="bgMusic"></audio>
+	<audio src="static/ding.wav" preload="auto" id="bgMusic"></audio>
 	<style>
 		html,body{
 			height: 100%;
@@ -262,7 +262,7 @@
 				</tbody>
 			</table>
 			<div class="load-box" style="position:absolute;left:0;top:0;height:100%;width:100%;background: rgba(0,0,0,.6);display: none;">
-				<img src="1.gif" alt="" style="position: absolute;left:50%;top:50%;">
+				<img src="static/loading.gif" alt="" style="position: absolute;left:50%;top:50%;">
 			</div>
 	    </div>
 	</div>
