添加编码格式

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <title>扫大哥</title>
 
   <head>
+	<meta charset="UTF-8">
     <script src="js/jquery.js"></script>
     <script src="js/utils.js"></script>
   </head>
@@ -669,7 +670,7 @@
           success: function (res) {
             if (res.code == 200) {
             }
-          },
+          },   
         });
       }
 
